# excel-list-transform

./: .gitignore  LICENSE.txt  README.md  README_pypi.md  bestInstalledPython.zsh  clean.zsh  doBuild.zsh  measure_speed.zsh  pyproject.toml  pytest.ini  setup.py  setup_build_environment.zsh
custom_build_tools/: custom_spec.py
src/excel_list_transform/: __init__.py  __main__.py  assert_dict_equal.py  check_indata_common.py  commontypes.py  config.py  config_auto_change_hook.py  config_enums.py  config_excel_list_transform.py  config_factory.py  config_match.py  config_read_old.py  config_xls_list_refmt_name.py  config_xls_list_refmt_num.py  config_xls_list_transf_name.py  config_xls_list_transf_num.py  file_extension.py  file_must_exist.py  generate_cfg.py  generate_txt.py  handle_csv.py  handle_empty_column.py  handle_excel.py  handle_tableio.py  migrate_cfg.py  migrate_cfg_warn_hook.py  num_named_conversion.py  py.typed  recode.py  rewrite_value.py  row_split_merge.py  row_split_merge_name.py  str_to_enum.py  transform_cmd.py  transform_func.py  transform_func_common.py  transform_func_named.py  transform_func_num.py  version.py  version_information.py
test/test_excel_list_transform/: SA_example.csv  SA_result.csv  __init__.py  bak_compat_0_7_13_name.cfg  bak_compat_0_7_13_number.cfg  measure_speed.py  tableio_helpers.py  test_assert_dict_equal.py  test_backward_0_8_5.py  test_commontypes.py  test_config.py  test_config_2.py  test_config_auto_change_hook.py  test_config_excel_list_transform.py  test_config_factory.py  test_config_read_old.py  test_config_xls_list_refmt_name.py  test_config_xls_list_refmt_num.py  test_config_xls_list_trans_name.py  test_config_xls_list_trans_num.py  test_file_extension.py  test_generate_cfg.py  test_generate_txt.py  test_handle_csv.py  test_handle_excel.py  test_handle_tableio.py  test_migrate_cfg.py  test_num_named_conversion.py  test_read.csv  test_read.xlsx  test_recode.py  test_rewrite_value.py  test_row_split_merge.py  test_row_split_merge_name.py  test_row_split_merge_num.py  test_str_to_enum.py  test_transform_cmd.py  (+7 more)
(+28 files in other folders)
