[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-list-transform"
version = "0.8.6"
authors = [
  { name="Tom Björkholm", email="klausuler_linnet0q@icloud.com" },
]
description = "Transform a list in excel, ODS or CSV."
readme = "README_pypi.md"
license = "MIT"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Source code" = "https://bitbucket.org/tom-bjorkholm/excel-list-transform"
