[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-list-transform"
version = "1.1.1"
authors = [
  { name="Tom Björkholm", email="klausuler_linnet0q@icloud.com" },
]
description = "Transform table data with configurable row and column changes."
readme = "README_pypi.md"
license = "MIT"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Other Audience",
    "Topic :: Office/Business",
    "Typing :: Typed"
]
dynamic = ["dependencies"]

[project.urls]
"Source code" = "https://github.com/tom-bjorkholm/excel-list-transform"
